# dynamical-system-model

./: .gitignore  3  CMakeLists.txt  CMakeLists.txt~  README.md  finite_diff_test.cc  inference.cc  main.cc  model.h  test_load.cc  test_train.cc  train.h  util.h  van_der_pol.h
include/: lorenz.h  model.h  ode_data_generator.h  train.h  train.h~  util.h  van_der_pol.h
src/: finite_diff_test.cc  inference.cc  test.cc  test_load.cc  test_train.cc  wang_b_machine.cc
